--- a/force-app/main/default/lwc/fundamentals/fundamentals.css
+++ b/force-app/main/default/lwc/fundamentals/fundamentals.css
@@ -1,4 +1,4 @@
 .select{
     color: var(--lwc-brandAccessible);
-    background-color: var(--lwc-colorBackgroundError);
+    /* background-color: var(--lwc-colorBackgroundError); */
 }
