newly generated last work on project

--- a/force-app/main/default/lwc/carTile/carTile.css
+++ b/force-app/main/default/lwc/carTile/carTile.css
@@ -1,9 +1,14 @@
 .carImage{
-    height: 12px;
+    height: 120px;
     max-width: initial;
     pointer-events: none;
 }
 .title{
     font-weight: bold;
     text-transform: uppercase;
+}
+.content{
+    padding: 8px;
+    background-color: antiquewhite;
+    border-radius: 0.25rem;
 }
